--- a/myapp/views/home.pug
+++ b/myapp/views/home.pug
@@ -123,4 +123,8 @@ html(lang='en')
         .row
           // div class="col-lg-4 col-lg-offset-2"
           .col-lg-6.col-lg-offset-4
-           
+                     // div class="col-lg-4 col-lg-offset-2"
+          <br>
+          <br>
+          .text-center
+            span.name(text-align = 'center') API TOKEN: <br> <br> #{token}
