--- a/myapp/views/home.pug
+++ b/myapp/views/home.pug
@@ -36,6 +36,7 @@ html(lang='en')
       var user = '#{first_name}';
       var id = '#{id}';
       var myname = '#{name}';
+      var token = '#{token}';
       var array_foto = !{photos};
       var array_notifiche = !{notifications};
       var collage_amici = !{collage_amici};
