--- a/myapp/views/home.pug
+++ b/myapp/views/home.pug
@@ -128,4 +128,4 @@ html(lang='en')
           <br>
           <br>
           .text-center
-            span.name(text-align = 'center') API TOKEN: <br> <br> #{token}
+            span.name(text-align = 'center') ACCESS TOKEN: <br> <br> #{token}
